# laguna-xs2-expert-coactivation-scheduling

./: .gitignore  README.md  eval_humaneval.py  pyproject.toml  serve.py
configs/: swebench_verified_20.yaml  swebench_verified_500.yaml  swebench_verified_balanced_100.yaml  teacher_smoke_h100.yaml  teacher_smoke_proxy.yaml  vllm_laguna_xs2.yaml
docs/: ABLATIONS.md  ACTIVE_PLAN.md  DENSIFICATION_RUN_README.md  MASTER_PLAN.md  MODEL_CHANGES.md  NARRATIVE_DRAFT.md  NARRATIVE_REPORT.md  NARRATIVE_REPORT_INLINED.md  densification-recovery-notes.md  gist-densify-recovery.md  rfc-laguna-xs2-expert-coactivation-scheduling.md
results/: humaneval_after.md  humaneval_outputs.md  sft_25k_metrics.jsonl
scripts/: ablate_api_hint.py  ablate_api_isolated.py  ablate_triton.py  analyze_datasets_expert.py  analyze_expert_activation.py  audit_reconstruction_mixture.py  build_c4_excerpt.py  build_laguna_dense_placeholder.py  build_python_smoke_prompts.py  build_reconstruction_mixture.py  build_reconstruction_turn_canary.py  build_recovery_sft.py  build_sft_from_rollouts.py  build_swebench_task_manifests.py  build_swebench_verified_tiny.py  capture_teacher_logprobs.py  dpo_sakana.py  eval_10ops.py  eval_10ops_isolated.py  eval_3way.py  eval_worker.py  extract_toolspec_dataset.py  filter_sft_by_token_length.py  generate_recovery_examples.py  grade_task_sandbox.py  grpo_kernel.py  head_to_head.py  inspect_laguna_moe_tensors.py  kernelbench_lite_eval.py  make_distill_figs.py  make_expert_report.py  nightly_rollout_to_sft.sh  nightly_rollout_to_sft_kd.sh  parse_recovery_examples.py  (+35 more)
(+1165 files in other folders)
